# personal-assistant-harness

./: .gitignore  CLAUDE.md  CONTEXT.md  pyrightconfig.json
docs/adr/: 0001-pydantic-ai-as-agent-sdk.md  0002-harness-architecture.md  0003-role-level-notes-over-atomic-achievements.md  0004-full-context-retrieval.md
docs/research/: eval-approaches.md  markdown-to-pdf-pipeline.md  python-agent-sdks.md
docs/spec/: experience-store-schema.md  job-fit-analysis.md  resume-generation.md
experiments/agent_loop/: WRITEUP.md  gemini.py  loop.py  main.py  pyproject.toml  test_gemini.py  test_loop.py
prototypes/retrieval_strategy/: REPORT.md  measure_retrieval.py
