[project]
name = "agent-loop-spike"
version = "0.1.0"
description = "Timeboxed spike: from-scratch agent loop against the raw Anthropic Messages API (issue #18). Never imported by the harness."
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
